JBIDE-23657 switch from PermSize to MetaspaceSize (since we requite JDK8); also bump MaxMetaspaceSize to 512m from 256m
Signed-off-by: nickboldt <nboldt@redhat.com>

JBIDE-23657 use MetaspaceSize with no max or min values

Signed-off-by: nickboldt <nboldt@redhat.com>

set -XX:MetaspaceSize=256m

Signed-off-by: nickboldt <nboldt@redhat.com>